--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -65,9 +65,9 @@
 In today's society, technology and engineering solutions are simply expected to work. The multitude of complex engineering designs and systems created to meet the needs of the world are expected to be infallible in the eyes of the public. When failures do occur, society considers them it shocking. When these failures happen in engineering systems critical to an aspect of safety, health, or some other critical role, people can die. In many cases, these failures are predictable and preventable in the design phase. The causes of such failures are known as hazards.
 \subsection{Purpose of Hazard Analysis}
 
-It is therefore necessary for engineers to perform extensive and thorough assessments of the systems they design in the aim to elimate as many failures as reasonably possible. This is process is called hazard analysis.\\
+It is therefore necessary for engineers to perform extensive and thorough assessments of the systems they design in the aim to eliminate as many failures as reasonably possible. This is process is called hazard analysis.\\
 
-More formally, hazard analysis is a step in the process to assess risk within an engineering system. Its aim is to identify and assess the potential conditions which may cause failure. These hazards can exist and cause failures alone, or in combination with other hazards or conditions. Once completed, a hazard analysis should provide a comprehensive assessment of the hazards within a system according to the system's components and boundaries, the assumptions critical in performing judgements regarding hazards and the scenarios they may occur in, and the requirements necessary to ensure that these hazards will be mitigated within the realm of reasonable possibility.
+More formally, hazard analysis is a step in the process to assess risk within an engineering system. Its aim is to identify and assess the potential conditions which may cause failure. These hazards can exist and cause failures alone, or in combination with other hazards or conditions. Once completed, a hazard analysis should provide a comprehensive assessment of the hazards within a system according to the system's components and boundaries, the assumptions critical in performing judgments regarding hazards and the scenarios they may occur in, and the requirements necessary to ensure that these hazards will be mitigated within the realm of reasonable possibility.
 
 \section{Scope}
 
@@ -128,7 +128,7 @@ This is where all data stored on the device can be viewed/ analyzed by the resea
 
 \begin{itemize}
 	\item No wires will come loose during use.
-	\item Batteries are pugged in correctly (the positive and negative ends are aligned as intended).
+	\item Batteries are plugged in correctly (the positive and negative ends are aligned as intended).
 	\item All data are stored in the correct memory location.
 	\item All subsystems work as intended.
 	\item All off-the-shelf components work was intended.
@@ -233,8 +233,8 @@ This is where all data stored on the device can be viewed/ analyzed by the resea
 				\end{itemize}
 			   \end{minipage}
 	
-			 & Prompt generated produces unexpected outputs causing imporper use of device
-			 & Prompt Generation system returns an error code. Test prompt produces unexpeted outputs
+			 & Prompt generated produces unexpected outputs causing improper use of device
+			 & Prompt Generation system returns an error code. Test prompt produces unexpected outputs
 	
 			 & \begin{minipage}[t]{\linewidth}
 				   \begin{itemize}[nosep, wide=0pt, leftmargin=*, after=\strut]
@@ -733,20 +733,39 @@ This is where all data stored on the device can be viewed/ analyzed by the resea
 
 \pagebreak
 \section{Roadmap}
+%Possible Priorities:
+%Low
+%High
+%Very High
 \begin{table}[H]
 	\caption{Road Map} \label{RoadMap}
 	\begin{tabularx}{\textwidth}{llX}
 		\toprule
-		\textbf{SNo.} & \textbf{Requirement} & \textbf{Expected date of implementation}        \\
+		\textbf{When to Implement} & \textbf{Requirement} & \textbf{Priority}        \\
 		\midrule
-		1         	& Name(s)               	& Description of changes \\
-		2         	& Name(s)              	& Description of changes \\
-		3          	& ...                   	& ...                   	     \\
-		4		& ... 				& ... 				     \\	
-		5		& ... 				& ...                               \\
+		During Course         	& HR1               	& Low					\\
+		         			& HR2              		& High 					\\
+		          			& HR3                   	& High                   	     		\\
+						& HR4 			& Very High 			 \\	
+		          			& HR5                   	& Very High                   	     \\
+		          			& SR1                   	& Low                   	     \\
+		          			& SR2     			& High                   	     \\
+		          			& SR4                   	& High                   	     \\
+		          			& SR5                   	& Low                   	     \\
+		          			& DSR1                   	& Low                   	     \\
+		          			& DSR2                   	& Very High                   	     \\
+		          			& DSRQ2                   & Very High                   	     \\
+		Postponed*		& SR2** 			& High                               \\
+						& SR3 			& Low                               \\
+						& DSRQ1 			& Very High                               \\
 		\bottomrule
 	\end{tabularx}
 \end{table}
+
+\textit{*Requirement implementation postponed past course completion.}\\
+\textit{**Regarding software imported to device after course completion.}\\
+
+Postponed requirements are not of lower priority than the requirements to be completed during the course. However, these postponed requirements can only come into effect once the device begins operation in its intended use cases. Otherwise, they are meaningless during the development phase. In addition, low priority values do not mean that the requirement may be dropped. Instead, it means that the implementation of said requirement may be easier, or less critical to the safety of the device, safety of the user, or functionality in general.\\
 
 \section*{Appendix}
 \subsection*{Therac-25 case study}
@@ -758,13 +777,13 @@ However, there were problems. Operators of the machine would find that they enco
 
 In addition, none really knew how the Therac-25 was programmed. The original developer had developed the software for the previous Therac-6 and Therac-20 models of radiotherapy machines, and had since left the company. AECL had directly ported the software into the Therac-25, and did not test the combination of the software and the new hardware properly.\\
 
-Cancer patients treated using the Therac-25 began to report issues. They entered the machine thinking that the procedures would be painless (which is usually true for radiotherapy). However, they often felt powerful shocks and intense burning sensations around the areas that the Therac-25 would administer radation. Later on, these same patients would fall heavily sick with symptoms identical to those with acute radiation poisoning. Some patients had to have entire limbs removed due to intense radiation damage, and none knew why. The AECL assured the operators that the machine was incapable of administering deadly doses of radiation, and attested to its safety.\cite{leveson-turner-1993} In reality, the machine was exposing patients to doses of radiation hundreds of times greater than what was prescribed.\cite{baase-henry-2019} Between 1985 and 1987, three people died of radiation exposure due to the Therac-25, and two others sustained lifelong injuries.\\
+Cancer patients treated using the Therac-25 began to report issues. They entered the machine thinking that the procedures would be painless (which is usually true for radiotherapy). However, they often felt powerful shocks and intense burning sensations around the areas that the Therac-25 would administer radiation. Later on, these same patients would fall heavily sick with symptoms identical to those with acute radiation poisoning. Some patients had to have entire limbs removed due to intense radiation damage, and none knew why. The AECL assured the operators that the machine was incapable of administering deadly doses of radiation, and attested to its safety.\cite{leveson-turner-1993} In reality, the machine was exposing patients to doses of radiation hundreds of times greater than what was prescribed.\cite{baase-henry-2019} Between 1985 and 1987, three people died of radiation exposure due to the Therac-25, and two others sustained lifelong injuries.\\
 
-A later investigation revealed that when operators changed from the electron mode of the machine to the x-ray mode in a certain way, the Therac-25 would fail to move a dampening shield between the fully powered x-ray and the patient. This dampening shield served to lower intensity of the x-ray beam to safe levels. The software would correctly detect an error, but simply displayed a window with the text 'MALFUNCTION 54'. Having grown used to these messages, the operators would proceed with treatment without the shield in place. In addition, a flag variable which would instruct the machine to perform safety checks was designed to be set by incrementation rather than being set to a fixed value. This flag would often overflow from its maximum value of 255 to zero, which instructed the machine to bypass safety checks. A later review would reveal that the Therac-25 had eleven seperate critical engineering and institutional failures which would have put a patient's life in danger. The combination of these factors caused the Therac-25 to give unlucky patients massive radiation overdoses.\\
+A later investigation revealed that when operators changed from the electron mode of the machine to the x-ray mode in a certain way, the Therac-25 would fail to move a dampening shield between the fully powered x-ray and the patient. This dampening shield served to lower intensity of the x-ray beam to safe levels. The software would correctly detect an error, but simply displayed a window with the text 'MALFUNCTION 54'. Having grown used to these messages, the operators would proceed with treatment without the shield in place. In addition, a flag variable which would instruct the machine to perform safety checks was designed to be set by incrementation rather than being set to a fixed value. This flag would often overflow from its maximum value of 255 to zero, which instructed the machine to bypass safety checks. A later review would reveal that the Therac-25 had eleven separate critical engineering and institutional failures which would have put a patient's life in danger. The combination of these factors caused the Therac-25 to give unlucky patients massive radiation overdoses.\\
 
 In response to this incident, the International Electrotechnical Commission (IEC) released standard IEC 62304; a standard which details development lifecycle standards specifically for software present on medical devices. It also describes the dangers and guidance regarding Software of Unknown Pedigree (SOUP).\\
 
-The worst part is that \textbf{none of this had to happen.} Should a hazard analysis have been performed, the team at AECL who designed the Therac-25 would have known that unnaccounted arithmetic overflows could bypass safety features. They would have known that the software written by the original Therac-6 and Therac-20 developer could not be maintained and troubleshot even for the most basic errors. They would have known that non-descript errors in a system like the Therac-25 could potentially be life-threatening. They would never have assured machine operators that overdoses were impossible. \\
+The worst part is that \textbf{none of this had to happen.} Should a hazard analysis have been performed, the team at AECL who designed the Therac-25 would have known that unaccounted arithmetic overflows could bypass safety features. They would have known that the software written by the original Therac-6 and Therac-20 developer could not be maintained and troubleshot even for the most basic errors. They would have known that non-descript errors in a system like the Therac-25 could potentially be life-threatening. They would never have assured machine operators that overdoses were impossible. \\
 
 Had they done so, they would have never decided that a direct port of the Therac-20 software would have been appropriate for the system they were designing. They may have thrown out the software all together and started from scratch. This would have taken much more time and many more resources than a simple port, but that team had a responsibility to ensure that the potential hazards of the Therac-25 were accounted for and mitigated. It would have been a good decision. As they did not make it, three patients died from treatments meant to save their lives.\cite{rose_1994}\\
 
@@ -777,8 +796,8 @@ This section may seem depressing, overly-dramatic, or entirely unnecessary to so
 To facilitate error handling, every system will return an error code that represents the status of that system. These error codes follow the following format, BED\_ERR\_ERRORTYPE
 For example BED\_ERR\_NONE represent that the system is working correctly. Some more examples of error codes are:
 \begin{itemize}
-	\item BED\_ERR\_PARAM\_ERR		 	: Represents an error with the paramaters of the function.
-	\item BED\_ERR\_GENERAL			 	: Represents a generic error that hasnt been catalogued yet.
+	\item BED\_ERR\_PARAM\_ERR		 	: Represents an error with the parameters of the function.
+	\item BED\_ERR\_GENERAL			 	: Represents a generic error that has not been cataloged yet.
 	\item BED\_ERR\_INVALID\_DATA\_SIZE	: Represents an error related to a size mismatch in what is stored within a block of memory or variable.
 \end{itemize}
 
